--- a/uiTest/index.html
+++ b/uiTest/index.html
@@ -238,8 +238,8 @@
     
     <!--<div class="ct-chart ct-golden-section chart" id="chart1"></div>-->
 
-    <div class= "sim flex-container2" id="sim1">
-      <div style="float: left;">
+    <div class= "sim flex-container2" id="sim1"style="overflow: auto;">
+      <div>
         <span class="blueDot"></span>&nbsp; Uninfected &emsp;
         <span class="yellowDot"></span>&nbsp; Infected: No Symptoms &emsp;
         <span class="redDot"></span>&nbsp; Infected: Symptoms &emsp;
@@ -278,7 +278,7 @@
               <p>Symptomatic Rate (0-1)</p>
               <input class="symptomaticRate" onchange="update()" type="number" value="1" step="0.01" min="0" max="1">
             </div>
-            <div style="width: 50%; float: right" class="hoverShow"><p id="basicPanel"></p></div>
+            <div style="width: 50%; float: right" class="hoverShow"><p id="basicPanel"></p><p>&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</p></div>
           </div>
           <div id="Advanced" class="tabcontent" >
             <div style="width: 50%; float: left">
