--- a/uiTest/index.html
+++ b/uiTest/index.html
@@ -259,7 +259,7 @@
         </div>
         <div>
           <div id="Basic" class="tabcontent">
-            <div style="width: 50%; float: left">
+            <div style="width: 50%;max-width: 50%; float: left">
               <br/>
               <div>
                 <p class="tooltipUnderline" onmouseover="showText('basic1info', 'basicPanel')">Social Distancing Compliance (0-1) </p>
@@ -278,7 +278,7 @@
               <p>Symptomatic Rate (0-1)</p>
               <input class="symptomaticRate" onchange="update()" type="number" value="1" step="0.01" min="0" max="1">
             </div>
-            <div style="width: 50%; float: right" class="hoverShow"><p id="basicPanel"></p><p>&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</p></div>
+            <div style="width: 50%; float: right" class="hoverShow"><p id="basicPanel"></p><p></p></div>
           </div>
           <div id="Advanced" class="tabcontent" >
             <div style="width: 50%; float: left">
