fixed ui part 2

--- a/uiTest/index.html
+++ b/uiTest/index.html
@@ -261,7 +261,6 @@
 <body style="text-align: center">
   <section style="padding-left: 15px; padding-right: 15px;">
     <div id="title"><p id="balls" style="font-size: 15pt">Covid19 Simulator</p></div>
-    <p>Click through the tabs to the right and feel free to change the variables to see how the spread of diseases (like COVID-19) change based on several factors.</p>
   </section>
 
   <!--This div outlines a simulation object. You can place as many of these in html as you like.
@@ -410,9 +409,10 @@
         </div>
       </div>
       <br />
-      <i>Note: This simulator is intended for interactive learning only and is not a true simulation of the real world. This tool should not be used to influence opinion or personal actions regarding the COVID-19 outbreak and should be seen as a fun and interactive tool only.</i><br />
-      <i>Note: All variables will automatically reflect their changes immediately except those with an asterisk (*) next to them, which will require clicking the <b>Reset</b> button</i><br />
+      <i>Click through the tabs to the right and feel free to change the variables to see how the spread of diseases (like COVID-19) change based on several factors.</i><br />
+      <i>All variables will automatically reflect their changes immediately except those with an asterisk (*) next to them, which will require clicking the <b>Reset</b> button</i><br />
       <i>Click on sim to run/pause<br/></i>
+      <i>This simulator is intended for interactive learning only and is not a true simulation of the real world. This tool should not be used to influence opinion or personal actions regarding the COVID-19 outbreak and should be seen as a fun and interactive tool only.</i><br />
     </div>
   </div>
   <script type="text/javascript">
