--- a/index.html
+++ b/index.html
@@ -350,9 +350,9 @@
             <div id="Communities" class="tabcontent">
               <div style="width: 50%; float: left">
                 <p style="color: green">Increasing the number communities will create seperate boxes where interactions only occur between communities when a ball moves between the communities, which is controlled by the switch rate</p>
-              <p>Communities: Number (1+) *</p>
+              <p>Number (1+) *</p>
               <input class="numCommunities" onchange="update()" type="number" value="1" step="1" min="1" max="100">
-              <p>Communities: Switch Rate </p>
+              <p>Switch Rate </p>
               <input class="switchCommunityRate" onchange="update()" type="number" value="0.005" step="0.001" min="0" max="1">
               </div>
               <div class="infoColumn"><p id="communitiesPanel" class="infoP"></p>
@@ -360,32 +360,32 @@
             </div>
             <div id="Market" class="tabcontent">
               <div style="width: 50%; float: left">
-                <p style="color: green">By changing <em>Market: Exists</em> to 1, a green box will appear representing a supermarket where balls go to shop. The rate at which they go to the store and how long they spend can be controlled below. <br/> Click Reset to make the changes show up</p>
-              <p>Market: Exists (0/1) *</p>
+                <p style="color: green">By changing <em>Market Exists</em> to 1, a green box will appear representing a supermarket where balls go to shop. The rate at which they go to the store and how long they spend can be controlled below. <br/> Click Reset to make the changes show up</p>
+              <p>Market Exists (0/1) *</p>
               <input class="hasMarketBox" onchange="update()" type="number" value="0" step="1" min="0" max="1">
-              <p>Market: Shopping Rate (0-1) </p>
+              <p>Shopping Rate (0-1) </p>
               <input class="marketFrequency" onchange="update()" type="number" value="0.001" step="0.001" min="0" max="1">
-              <p>Market: Shopping Time (1+) </p>
+              <p>Shopping Time (1+) </p>
               <input class="marketDuration" onchange="update()" type="number" value="20" step="1" min="1" max="1000">
               </div>
               <div class="infoColumn"><p id="marketPanel" class="infoP"></p></div>
             </div>
             <div id="Hospital" class="tabcontent">
               <div style="width: 50%; float: left">
-                <p style="color: green">By changing Hospital: Exists to 1, a red box representing a hospital will appear in the simulation. Infected balls will be admitted to the hospital at a rate equal to the Admission Rate</p>
-                <p>Hospital: Exists (0/1) *</p>
+                <p style="color: green">By changing Hospital Exists to 1, a red box representing a hospital will appear in the simulation. Infected balls will be admitted to the hospital at a rate equal to the Admission Rate</p>
+                <p>Hospital Exists (0/1) *</p>
                 <input class="hasHospitalBox" onchange="update()" type="number" value="0" step="1" min="0" max="1">
-                <p>Hospital: Admission Rate (0-1)</p>
+                <p>Admission Rate of Symptomatic Patients (0-1)</p>
                 <input class="hospitalizationRate" onchange="update()" type="number" value="0" step="0.01" min="0" max="1">
               </div>
               <div class="infoColumn"><p id="hospitalPanel" class="infoP"></p></div>
             </div>
             <div id="TestTrace" class="tabcontent">
               <div style="width: 50%; float: left">
-              <p class="underline" onmouseover="showText('TestTrace1info', 'testTracePanel')">Test and Trace: Test Number of Contacts (0-25)</p>
+              <p class="underline" onmouseover="showText('TestTrace1info', 'testTracePanel')">Test Number of Contacts (0-25)</p>
               <p id="TestTrace1info" style="display: none;">The <em>Test Number of Contacts</em> parameter defines the number of recent contacts that will be tested as a result of contact tracing after a ball becomes infected. Each ball in our simulation keeps a record of its last 25 contacts so that if it becomes infected, its recent contacts can be tested through contact tracing.</p>
               <input class="testAndTraceNumContacts" onchange="update()" type="number" value="10" step="1" min="0" max="25">
-              <p>Test and Trace: Quarantine Mode: 0=At Home, 1=In Hospital </p>
+              <p>Quarantine Mode: 0=At Home, 1=In Hospital </p>
               <input class="testAndTraceQuarantineMode" onchange="update()" type="number" value="0" step="1" min="0" max="1">
               </div>
               <div class="infoColumn"><p id="testTracePanel" class="infoP"></p></div>
